use arrow function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Input Box -->
         <div class="d-flex">
             <input type="text" class="form-control me-2" placeholder="JavaScript" id="searchInput" />
-            <button class="btn btn-dark" id="search-btn">Search</button>
+            <button onclick="loadData()" class="btn btn-dark">Search</button>
         </div>
     </section>
 
